Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@runner@aborted - fail - GEM_BUG_ON(intel_context_is_pinned(rq->hw_context))
Please look at the attachment to see the full boot log.
<3>[ 5.095262] __intel_engines_record_defaults:1125 GEM_BUG_ON(intel_context_is_pinned(rq->hw_context))
<4>[ 5.095321] ------------[ cut here ]------------
<2>[ 5.095324] kernel BUG at drivers/gpu/drm/i915/i915_gem.c:1125!
<4>[ 5.095354] invalid opcode: 0000 [#1] PREEMPT SMP PTI
<4>[ 5.095363] CPU: 1 PID: 340 Comm: modprobe Not tainted 5.5.0-rc1-ge42617b825f8-linus-v5.5-rc1 #1
<4>[ 5.095374] Hardware name: /NUC6i7KYB, BIOS KYSKLi70.86A.0064.2019.0924.1032 09/24/2019
<4>[ 5.095463] RIP: 0010:i915_gem_init+0x6ef/0x8e0 [i915]
<4>[ 5.095472] Code: 30 56 d3 f5 48 8b 35 a0 5b 1f 00 49 c7 c0 78 ae 52 c0 b9 65 04 00 00 48 c7 c2 40 8f 4f c0 48 c7 c7 6a f4 3f c0 e8 21 63 da f5 <0f> 0b 48 c7 c1 23 82 55 c0 ba e3 04 00 00 48 c7 c6 60 8f 4f c0 48
<4>[ 5.095494] RSP: 0018:ffff9642802ff9f0 EFLAGS: 00010286
<4>[ 5.095501] RAX: 0000000000000013 RBX: ffff8d664c800000 RCX: 0000000000000000
<4>[ 5.095510] RDX: 0000000000000001 RSI: 0000000000000008 RDI: ffff8d666d179c00
<4>[ 5.095519] RBP: 0000000000000000 R08: 000000000000004f R09: ffff8d666c8b5000
<4>[ 5.095529] R10: 0000000000000000 R11: ffff8d666d179c00 R12: ffff8d664c800d88
<4>[ 5.095538] R13: ffff8d664c80be48 R14: ffff8d664c80be30 R15: ffff8d6655c173c0
<4>[ 5.095547] FS: 00007f320799a540(0000) GS:ffff8d666ee80000(0000) knlGS:0000000000000000
<4>[ 5.095558] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4>[ 5.095566] CR2: 00007fc64467d000 CR3: 00000004a7764003 CR4: 00000000003606e0
<4>[ 5.095575] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
<4>[ 5.095583] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
<4>[ 5.095593] Call Trace:
<4>[ 5.095656] i915_driver_probe+0xb65/0x15a0 [i915]
<4>[ 5.095666] ? find_held_lock+0x2d/0x90
<4>[ 5.095676] ? __pm_runtime_resume+0x4f/0x80
<4>[ 5.095737] i915_pci_probe+0x43/0x1b0 [i915]
<4>[ 5.095751] ? _raw_spin_unlock_irqrestore+0x34/0x60
<4>[ 5.095761] pci_device_probe+0x9e/0x120
<4>[ 5.095770] really_probe+0xea/0x420
<4>[ 5.095777] driver_probe_device+0x10b/0x120
<4>[ 5.095784] device_driver_attach+0x4a/0x50
<4>[ 5.095792] __driver_attach+0x97/0x130
<4>[ 5.095799] ? device_driver_attach+0x50/0x50
<4>[ 5.095806] bus_for_each_dev+0x74/0xc0
<4>[ 5.095814] bus_add_driver+0x142/0x220
<4>[ 5.095820] ? 0xffffffffc09b1000
<4>[ 5.095827] driver_register+0x56/0xf0
<4>[ 5.095833] ? 0xffffffffc09b1000
<4>[ 5.095839] do_one_initcall+0x58/0x2ff
<4>[ 5.095847] ? rcu_read_lock_sched_held+0x4d/0x80
<4>[ 5.095856] ? kmem_cache_alloc_trace+0x290/0x2c0
<4>[ 5.095865] do_init_module+0x56/0x1f2
<4>[ 5.095872] load_module+0x2458/0x2a10
<4>[ 5.095885] ? __do_sys_finit_module+0xe9/0x110
<4>[ 5.095893] __do_sys_finit_module+0xe9/0x110
<4>[ 5.095905] do_syscall_64+0x4f/0x240
<4>[ 5.095912] entry_SYSCALL_64_after_hwframe+0x49/0xbe
<4>[ 5.095919] RIP: 0033:0x7f32074b7839
<4>[ 5.095926] Code: 00 f3 c3 66 2e 0f 1f 84 00 00 00 00 00 0f 1f 40 00 48 89 f8 48 89 f7 48 89 d6 48 89 ca 4d 89 c2 4d 89 c8 4c 8b 4c 24 08 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 1f f6 2c 00 f7 d8 64 89 01 48
<4>[ 5.095947] RSP: 002b:00007ffc4ad11fc8 EFLAGS: 00000246 ORIG_RAX: 0000000000000139
<4>[ 5.095958] RAX: ffffffffffffffda RBX: 00005598ef5bdb10 RCX: 00007f32074b7839
<4>[ 5.095967] RDX: 0000000000000000 RSI: 00005598ef3acd2e RDI: 0000000000000000
<4>[ 5.095976] RBP: 00005598ef3acd2e R08: 0000000000000000 R09: 0000000000000000
<4>[ 5.095985] R10: 0000000000000000 R11: 0000000000000246 R12: 0000000000000000
<4>[ 5.095994] R13: 00005598ef5bdc40 R14: 0000000000040000 R15: 00005598ef5bdb10
<4>[ 5.096006] Modules linked in: i915(+) btusb btrtl x86_pkg_temp_thermal btbcm coretemp btintel bluetooth crct10dif_pclmul snd_hda_intel snd_intel_dspcfg crc32_pclmul snd_hda_codec ghash_clmulni_intel snd_hwdep ecdh_generic snd_hda_core ecc e1000e snd_pcm mei_me ptp pps_core mei prime_numbers
<4>[ 5.096053] ---[ end trace 37274ac5abd363b3 ]---